kong/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oficina-app-ingress
  namespace: kong
  annotations:
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /api-docs
            pathType: Prefix
            backend:
              service:
                name: oficina-app-external
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oficina-app-external
                port:
                  number: 80
