kong/auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  namespace: kong
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/protocols: "https"
    konghq.com/override: |
      proxy_ssl_server_name on;
      proxy_ssl_name 7w53qn35x4csqlq6mmsni74dn40wexit.lambda-url.us-east-1.on.aws;
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: lambda-auth-external
                port:
                  number: 443
